# Variant

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt  Polymorphic.cpp
ea_variant/: ea_variant.h
ea_variant/Source/: Rollbear.h  Variant.h
